--- a/style/css/ui/ui_button.css
+++ b/style/css/ui/ui_button.css
@@ -95,21 +95,21 @@ a.btn:hover {
 }
 
 /* line 70, ../../sass/ui/ui_button.scss */
-.btn-defalut {
+.btn-default {
   color: #666666;
   background-color: #f4f4f4;
 }
 /* line 74, ../../sass/ui/ui_button.scss */
-.btn-defalut:link, .btn-defalut:visited {
+.btn-default:link, .btn-default:visited {
   color: #666666;
 }
 /* line 77, ../../sass/ui/ui_button.scss */
-.btn-defalut:hover {
+.btn-default:hover {
   background-color: #e7e7e7;
   color: #666666;
 }
 /* line 81, ../../sass/ui/ui_button.scss */
-.btn-defalut:active {
+.btn-default:active {
   background-color: white;
 }
 
@@ -132,8 +132,14 @@ a.btn:hover {
 .btn-blank:active {
   background-color: white;
 }
+/* line 86, ../../sass/ui/ui_button.scss */
+.btn-blank:hover {
+  background: #49e;
+  border-color: #49e;
+  color: #fff;
+}
 
-/* line 99, ../../sass/ui/ui_button.scss */
+/* line 104, ../../sass/ui/ui_button.scss */
 .btn-xs {
   height: 20px;
   line-height: 20px;
@@ -141,7 +147,7 @@ a.btn:hover {
   font-size: 12px;
 }
 
-/* line 109, ../../sass/ui/ui_button.scss */
+/* line 114, ../../sass/ui/ui_button.scss */
 button.btn-xs,
 input.btn-xs {
   height: 22px;
@@ -149,7 +155,7 @@ input.btn-xs {
   *line-height: 17px;
 }
 
-/* line 99, ../../sass/ui/ui_button.scss */
+/* line 104, ../../sass/ui/ui_button.scss */
 .btn-s {
   height: 22px;
   line-height: 22px;
@@ -157,7 +163,7 @@ input.btn-xs {
   font-size: 12px;
 }
 
-/* line 109, ../../sass/ui/ui_button.scss */
+/* line 114, ../../sass/ui/ui_button.scss */
 button.btn-s,
 input.btn-s {
   height: 24px;
@@ -165,7 +171,7 @@ input.btn-s {
   *line-height: 19px;
 }
 
-/* line 99, ../../sass/ui/ui_button.scss */
+/* line 104, ../../sass/ui/ui_button.scss */
 .btn-m {
   height: 28px;
   line-height: 28px;
@@ -174,7 +180,7 @@ input.btn-s {
   font-family: "\5FAE\8F6F\96C5\9ED1", Arial, sans-serif;
 }
 
-/* line 109, ../../sass/ui/ui_button.scss */
+/* line 114, ../../sass/ui/ui_button.scss */
 button.btn-m,
 input.btn-m {
   height: 30px;
@@ -182,7 +188,7 @@ input.btn-m {
   *line-height: 25px;
 }
 
-/* line 99, ../../sass/ui/ui_button.scss */
+/* line 104, ../../sass/ui/ui_button.scss */
 .btn-l {
   height: 32px;
   line-height: 32px;
@@ -191,7 +197,7 @@ input.btn-m {
   font-family: "\5FAE\8F6F\96C5\9ED1", Arial, sans-serif;
 }
 
-/* line 109, ../../sass/ui/ui_button.scss */
+/* line 114, ../../sass/ui/ui_button.scss */
 button.btn-l,
 input.btn-l {
   height: 34px;
@@ -199,7 +205,7 @@ input.btn-l {
   *line-height: 29px;
 }
 
-/* line 99, ../../sass/ui/ui_button.scss */
+/* line 104, ../../sass/ui/ui_button.scss */
 .btn-xl {
   height: 36px;
   line-height: 36px;
@@ -208,7 +214,7 @@ input.btn-l {
   font-family: "\5FAE\8F6F\96C5\9ED1", Arial, sans-serif;
 }
 
-/* line 109, ../../sass/ui/ui_button.scss */
+/* line 114, ../../sass/ui/ui_button.scss */
 button.btn-xl,
 input.btn-xl {
   height: 38px;
@@ -216,35 +222,29 @@ input.btn-xl {
   *line-height: 33px;
 }
 
-/* line 127, ../../sass/ui/ui_button.scss */
-.disabled {
-  background-color: #f0f0f0;
-  background-image: -moz-linear-gradient(top, #f2f2f2 0, #dddddd 100%);
-  background-image: -webkit-linear-gradient(top, #f2f2f2 0, #dddddd 100%);
-  background-image: -o-linear-gradient(top, #f2f2f2 0, #dddddd 100%);
-  background-image: linear-gradient(to bottom, #f2f2f2 0%, #dddddd 100%);
-  border: 1px solid #d8d8d8;
-  border-bottom-color: #bbb;
+/* line 133, ../../sass/ui/ui_button.scss */
+.disabled,
+.disabled:hover {
+  background-color: #e6e6e6;
   color: #999999;
   cursor: not-allowed;
   opacity: 0.8;
   filter: alpha(opacity=80);
-  text-shadow: 1px 1px 0 #f0f1f2;
 }
 
-/* line 137, ../../sass/ui/ui_button.scss */
+/* line 139, ../../sass/ui/ui_button.scss */
 a.disabled {
   color: #999999;
 }
 
-/* line 141, ../../sass/ui/ui_button.scss */
+/* line 143, ../../sass/ui/ui_button.scss */
 .btn-icon {
   padding-left: 26px;
   padding-right: 10px;
   position: relative;
 }
 
-/* line 146, ../../sass/ui/ui_button.scss */
+/* line 148, ../../sass/ui/ui_button.scss */
 .btn-icon .icon {
   position: absolute;
   left: 10px;
@@ -253,14 +253,14 @@ a.disabled {
   _top: 4px;
 }
 
-/* line 162, ../../sass/ui/ui_button.scss */
+/* line 164, ../../sass/ui/ui_button.scss */
 .btn-drop {
   display: inline-block;
   _display: inline;
   width: 71px;
 }
 
-/* line 167, ../../sass/ui/ui_button.scss */
+/* line 169, ../../sass/ui/ui_button.scss */
 .btn-drop-current {
   cursor: pointer;
   border: 1px solid #bfbfbf;
@@ -271,7 +271,7 @@ a.disabled {
   border-radius: 2px;
 }
 
-/* line 174, ../../sass/ui/ui_button.scss */
+/* line 176, ../../sass/ui/ui_button.scss */
 .btn-drop-current a {
   float: left;
   line-height: 18px;
@@ -279,7 +279,7 @@ a.disabled {
   width: 42px;
 }
 
-/* line 180, ../../sass/ui/ui_button.scss */
+/* line 182, ../../sass/ui/ui_button.scss */
 .btn-drop-arrow {
   float: left;
   width: 16px;
@@ -289,7 +289,7 @@ a.disabled {
   position: relative;
 }
 
-/* line 188, ../../sass/ui/ui_button.scss */
+/* line 190, ../../sass/ui/ui_button.scss */
 .btn-drop-arrow i {
   position: absolute;
   height: 0;
@@ -304,31 +304,31 @@ a.disabled {
   left: 4px;
 }
 
-/* line 201, ../../sass/ui/ui_button.scss */
+/* line 203, ../../sass/ui/ui_button.scss */
 .btn-drop-current:hover {
   background-color: #4078bb;
   border-color: #3c7ac7 #4078bd #1f5699;
 }
 
-/* line 205, ../../sass/ui/ui_button.scss */
+/* line 207, ../../sass/ui/ui_button.scss */
 .btn-drop-current:hover .btn-drop-arrow {
   border-left: 1px solid #216ca6;
   background-color: transparent;
 }
 
-/* line 209, ../../sass/ui/ui_button.scss */
+/* line 211, ../../sass/ui/ui_button.scss */
 .btn-drop-current:hover .btn-drop-arrow i {
   border-color: white #4078bb #4078bb #4078bb;
 }
 
-/* line 214, ../../sass/ui/ui_button.scss */
+/* line 216, ../../sass/ui/ui_button.scss */
 .btn-drop-current:hover a:link,
 .btn-drop-current:hover a:visited,
 .btn-drop-current:hover a:hover {
   color: #fff;
 }
 
-/* line 217, ../../sass/ui/ui_button.scss */
+/* line 219, ../../sass/ui/ui_button.scss */
 .btn-drop-down {
   position: absolute;
   border: 1px solid #cccccc;
@@ -337,12 +337,12 @@ a.disabled {
   width: 69px;
 }
 
-/* line 224, ../../sass/ui/ui_button.scss */
+/* line 226, ../../sass/ui/ui_button.scss */
 .btn-drop-down ul {
   margin: 0 !important;
 }
 
-/* line 227, ../../sass/ui/ui_button.scss */
+/* line 229, ../../sass/ui/ui_button.scss */
 .btn-drop-down a {
   display: block;
   height: 19px;
@@ -350,13 +350,13 @@ a.disabled {
   padding: 0 5px;
 }
 
-/* line 234, ../../sass/ui/ui_button.scss */
+/* line 236, ../../sass/ui/ui_button.scss */
 .btn-drop-down a:link,
 .btn-drop-down a:visited {
   color: #666;
 }
 
-/* line 237, ../../sass/ui/ui_button.scss */
+/* line 239, ../../sass/ui/ui_button.scss */
 .btn-drop-down a:hover {
   color: #333;
   background-color: #dfecf5;
