--- a/style/sass/ui/ui_pop.scss
+++ b/style/sass/ui/ui_pop.scss
@@ -42,6 +42,7 @@ $popBorder: 5px solid #4c4c4c;
     }
   }
   .#{$popBaseClass}-ft {
+    margin-bottom: 40px;
     padding: 15px 0 10px;
     text-align: center;
     .btn {
