--- a/style/css/ui/ui_pop.css
+++ b/style/css/ui/ui_pop.css
@@ -45,25 +45,26 @@
 }
 /* line 44, ../../sass/ui/ui_pop.scss */
 .pop .pop-ft {
+  margin-bottom: 40px;
   padding: 15px 0 10px;
   text-align: center;
 }
-/* line 47, ../../sass/ui/ui_pop.scss */
+/* line 48, ../../sass/ui/ui_pop.scss */
 .pop .pop-ft .btn {
   margin: 0 5px;
 }
 
-/* line 53, ../../sass/ui/ui_pop.scss */
+/* line 54, ../../sass/ui/ui_pop.scss */
 .pop-alert {
   width: 300px;
 }
-/* line 55, ../../sass/ui/ui_pop.scss */
+/* line 56, ../../sass/ui/ui_pop.scss */
 .pop-alert .pop-bd {
   font-size: 14px;
   padding: 20px;
 }
 
-/* line 61, ../../sass/ui/ui_pop.scss */
+/* line 62, ../../sass/ui/ui_pop.scss */
 .tip-alpha {
   width: 100%;
   height: 100%;
@@ -76,7 +77,7 @@
   z-index: 100;
 }
 
-/* line 67, ../../sass/ui/ui_pop.scss */
+/* line 68, ../../sass/ui/ui_pop.scss */
 .pop-m {
   width: 600px;
 }
