--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -1187,7 +1187,7 @@ select {
 
 /* line 23, ../../sass/ui/ui_tab.scss */
 .tab-con {
-  padding: 40px 50px;
+  padding: 40px 50px 0;
 }
 
 /* line 25, ../../sass/module/tm.scss */
